Fix Scrollbar apparition fix/docorganization

--- a/css/main.sass
+++ b/css/main.sass
@@ -192,7 +192,7 @@ details[open]
     margin: 30px 0px
 
 .menu:hover
-  overflow-y: scroll
+  overflow-y: auto
 
 .search-content
   display: flex
@@ -206,3 +206,5 @@ details[open]
   max-width: 184px
   max-height: calc(100% - 112px)
 
+.search-content:hover
+  overflow-y: auto
